--- a/index.html
+++ b/index.html
@@ -175,6 +175,13 @@
             <span class="arrow arrow_right">→</span>
         </div>
     </div>
+   <div class="discr-container">
+   <p>Bone and cement modelling
+clay on 24 cm x 30 cm white canvas, acrylic paint
+with drip technique. And monobloc chair painted
+with acrylic paint on 24 cm x 24 cm white canvas,
+acrylic paint with drip technique.</p>
+  </div>
 </div>
 
   <div class="combined-container">
@@ -183,10 +190,8 @@
         <div class="info">
             <h2>Typography</h2>
             <p>Font Families: Gull Edge and Tukan Sans</p>
-            <ul>
-                <li><a href="https://drive.google.com/drive/folders/1U2_Ybbpf-9-2r35jf8VSxBvZGMz3gh_v?usp=sharing">Download Tukan Sans</a></li>
-                <li><a href="https://drive.google.com/drive/folders/1r7RaDSKOWb6uzabs4UIma_JYrOsKwCqy?usp=drive_link">Download Gull Edge</a></li>
-            </ul>
+            <a href="https://drive.google.com/drive/folders/1U2_Ybbpf-9-2r35jf8VSxBvZGMz3gh_v?usp=sharing">Download Tukan Sans</a><br>
+            <a href="https://drive.google.com/drive/folders/1r7RaDSKOWb6uzabs4UIma_JYrOsKwCqy?usp=drive_link">Download Gull Edge</a>
         </div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/typo1-copyright-moritzgauss.jpg" alt="Typography Image 1">
@@ -270,7 +275,11 @@
             <span class="arrow arrow_right">→</span>
         </div>
     </div>
- </div>
+   <div class="discr-container">
+    <p>I make careful adjustments to ensure consistency and clarity in my fonts. 
+   <br>Tukan Sans, in particular, stands out due to its distinctive contours and spacing, making it easily recognizable.</p>
+   </div>
+</div>
 
     <!-- Photography Section -->
     <div class="content" id="photography">
