--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="info">
                 <h2>Creative Direction (2024)</h2>
                 <p>illRise2Shine Corporate Identity and Fashion Concepts</p>
-                <a href="https://r2shine.de">https://r2shine.de</a>
+                <a href="https://r2shine.de" target="_blank>https://r2shine.de</a>
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd1-copyright-moritzgauss.JPG" alt="Creative Direction Image 1">
@@ -125,7 +125,6 @@
             <div class="info">
                 <h2>Artworks (2023)</h2>
                 <p>A collection of digital and physical artworks.</p>
-                <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork1-copyright-moritzgauss.jpg" alt="Artworks Image 1">
@@ -208,7 +207,7 @@ acrylic paint with drip technique.</p>
     <div class="scroll-box">
         <div class="info"></div>
         <div class="img-container">
-            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/typo3-copyright-moritzgauss.png" alt="Typography Image 3">
+            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/typo3-copyright-moritzgauss.jpeg" alt="Typography Image 3">
         </div>
     </div>
 
@@ -255,7 +254,7 @@ acrylic paint with drip technique.</p>
             <div class="info">
                 <h2>Printworks (2021 - Now)</h2>
                 <p>Digital and screen print</p>
-                <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
+                <a href="https://paypal.me/morgus"> Pay via Paypal Friends and Family: 39€ and your Adress </a>
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/print1-copyright-moritzgauss.jpg" alt="Printworks Image 1">
@@ -275,10 +274,6 @@ acrylic paint with drip technique.</p>
             <span class="arrow arrow_right">→</span>
         </div>
     </div>
-   <div class="discr-container">
-    <p>I make careful adjustments to ensure consistency and clarity in my fonts. 
-   <br>Tukan Sans, in particular, stands out due to its distinctive contours and spacing, making it easily recognizable.</p>
-   </div>
 </div>
 
     <!-- Photography Section -->
@@ -287,7 +282,6 @@ acrylic paint with drip technique.</p>
             <div class="info">
                 <h2>Photography (2019 - Now)</h2>
                 <p>Digital and analog photography</p>
-                <a href="https://placeholder.shop/products/...">https://placeholder.shop/products/...</a>
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/photo1-copyright-moritzgauss.jpg" alt="Photography Image 1">
@@ -296,7 +290,7 @@ acrylic paint with drip technique.</p>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
-                <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/photo2-copyright-moritzgauss.jpg" alt="Photography Image 2">
+                <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/photo2-copyright-moritzgauss.jpeg" alt="Photography Image 2">
             </div>
         </div>
         <div class="scroll-box">
