--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ acrylic paint with drip technique.</p>
             <div class="info">
                 <h2>Printworks (2021 - Now)</h2>
                 <p>Digital and screen print</p>
-                <a href="https://paypal.me/morgus"> Pay via Paypal Friends and Family: 39€ and your Adress </a>
+                <a href="https://paypal.me/morgus"> Pay via Paypal Friends and Family: 39€ and your Address (Germany only)</a>
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/print1-copyright-moritzgauss.jpg" alt="Printworks Image 1">
