--- a/index.html
+++ b/index.html
@@ -119,12 +119,51 @@
         </div>
     </div>
 
+  
+  <div class="combined-container">
+   <div class="content" id="atelier">
+    <div class="scroll-box">
+        <div class="info">
+            <h2>Atelier M26 (2023)</h2>
+            <p>In April 2023, I gathered a place for a “Local Artist in Residence” to move into an atelier<br>on the premises of the “M26” art gallery in Regensburg city.</p>
+            <a href="https://kalender.regensburg-digital.de/veranstaltung/vielfaeltiges-kulturprogramm-im-m26/">Link to M26 Program</a>
+        </div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier2-copyright-moritzgauss.jpeg" alt="Image 1">
+        </div>
+    </div>
+    
+    <div class="scroll-box">
+        <div class="info"><p>Typography Workshops, i offered in the gallery space M26 in Regensburg.
+</p></div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier1-copyright-moritzgauss.jpeg" alt="Image 2">
+        </div>
+    </div>
+
+    <div class="scroll-box">
+        <div class="info"></div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier3-copyright-moritzgauss.jpeg" alt="Image 3">
+        </div>
+    </div>
+</div>
+
+ <div class="arrows-wrapper">
+        <div class="arrows">
+            <span class="arrow arrow_left">←</span>
+            <span class="arrow arrow_right">→</span>
+        </div>
+    </div>
+ </div>
+
+  
   <div class="combined-container">
     <div class="content" id="artworks">
         <div class="scroll-box">
             <div class="info">
                 <h2>Artworks (2023)</h2>
-                <p>A collection of digital and physical artworks.</p>
+                <p>A collection of paintings i made and consired good enough to upload here.</p>
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork1-copyright-moritzgauss.jpg" alt="Artworks Image 1">
