index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <div class="scroll-box">
         <div class="info">
             <h2>Atelier M26 (2023)</h2>
-            <p>In April 2023, I gathered a place for a “Local Artist in Residence” to move into an atelier<br>on the premises of the “M26” art gallery in Regensburg city.</p>
+            <p>In April 2023, I applied to Local Artist in Residence to move into an atelier<br>on the premises of the “M26” art gallery in Regensburg.</p>
             <a href="https://kalender.regensburg-digital.de/veranstaltung/vielfaeltiges-kulturprogramm-im-m26/">Link to M26 Program</a>
         </div>
         <div class="img-container">
@@ -134,13 +134,11 @@
     </div>
     
     <div class="scroll-box">
-        <div class="info"><p>Typography Workshops, i offered in the gallery space M26 in Regensburg.
-</p></div>
+        <div class="info"></div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier1-copyright-moritzgauss.jpeg" alt="Image 2">
         </div>
     </div>
-
     <div class="scroll-box">
         <div class="info"></div>
         <div class="img-container">
@@ -155,6 +153,10 @@
             <span class="arrow arrow_right">→</span>
         </div>
     </div>
+  <div class="discr-container">
+    <p>The Images 1, 2 were taking during a Typography Workshops, i offered in the gallery and cultural space in the Maximilianstraße 26 in Regensburg..
+</p>
+ </div>
  </div>
 
   
@@ -163,7 +165,7 @@
         <div class="scroll-box">
             <div class="info">
                 <h2>Artworks (2023)</h2>
-                <p>A collection of paintings i made and consired good enough to upload here.</p>
+                <p>A collection of paintings i made <br> and considered good enough to upload here.</p>
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork1-copyright-moritzgauss.jpg" alt="Artworks Image 1">
