index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -307,6 +307,12 @@ acrylic paint with drip technique.</p>
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/print3-copyright-moritzgauss.jpg" alt="Printworks Image 3">
             </div>
         </div>
+        div class="scroll-box">
+            <div class="info"></div>
+            <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/photo2-copyright-moritzgauss.jpeg" alt="Printworks Image 4">
+        </div>
+        </div>
     </div>
 
     <div class="arrows-wrapper">
@@ -326,12 +332,6 @@ acrylic paint with drip technique.</p>
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/photo1-copyright-moritzgauss.jpg" alt="Photography Image 1">
-            </div>
-        </div>
-        <div class="scroll-box">
-            <div class="info"></div>
-            <div class="img-container">
-                <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/photo2-copyright-moritzgauss.jpeg" alt="Photography Image 2">
             </div>
         </div>
         <div class="scroll-box">
