index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ acrylic paint with drip technique.</p>
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/print3-copyright-moritzgauss.jpg" alt="Printworks Image 3">
             </div>
         </div>
-        div class="scroll-box">
+        <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/photo2-copyright-moritzgauss.jpeg" alt="Printworks Image 4">
