--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     <a href="/concepts" class="nav">Concepts</a>
 </nav>
 
+ <div id="anim-container">
+    <div id="board"></div>
+    <div id="explanationText">Binary for Tuttofare (ital. Jack of all Trades)</div>
+</div>
+ 
  <div class="main-container">
 
   <div class="combined-container">
