index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <a href="/concepts" class="nav">Concepts</a>
 </nav>
 
- <div id="anim-container">
+<!-- <div id="anim-container">
     <div id="board"></div>
     <div id="explanationText">01010101 01101110 01100101 01101100 01101100 01100001 01101101 =<br>Binary for Tuttofare (ital. Jack of all Trades)</div>
-</div>
+</div> -->
  
  <div class="main-container">
 
