--- a/index.html
+++ b/index.html
@@ -50,12 +50,6 @@
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
-                <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd2-copyright-moritzgauss.png" alt="Creative Direction Image 2">
-            </div>
-        </div>
-        <div class="scroll-box">
-            <div class="info"></div>
-            <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd3-copyright-moritzgauss.JPG" alt="Creative Direction Image 3">
             </div>
         </div>
@@ -75,18 +69,6 @@
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd6-copyright-moritzgauss.jpg" alt="Creative Direction Image 6">
-            </div>
-        </div>
-        <div class="scroll-box">
-            <div class="info"></div>
-            <div class="img-container">
-                <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd7-copyright-moritzgauss.JPG" alt="Creative Direction Image 7">
-            </div>
-        </div>
-        <div class="scroll-box">
-            <div class="info"></div>
-            <div class="img-container">
-                <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd8-copyright-moritzgauss.png" alt="Creative Direction Image 8">
             </div>
         </div>
         <div class="scroll-box">
@@ -165,7 +147,7 @@
  </div>
 
   
-  <div class="combined-container">
+  <!-- <div class="combined-container">
     <div class="content" id="artworks">
         <div class="scroll-box">
             <div class="info">
@@ -227,7 +209,7 @@ with drip technique. And monobloc chair painted
 with acrylic paint on 24 cm x 24 cm white canvas,
 acrylic paint with drip technique.</p>
   </div>
-</div>
+</div> -->
 
   <div class="combined-container">
    <div class="content" id="typography">
