--- a/index.html
+++ b/index.html
@@ -17,16 +17,23 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1><a href="/about">Moritz Gauss</a></h1>
-    </header>
 
-<nav>
-    <a href="/" class="nav active">Creative</a>
-    <a href="/digital" class="nav">Digital</a>
-    <a href="/objects" class="nav">Objects</a>
-    <a href="/concepts" class="nav">Concepts</a>
-</nav>
+    <div class="header-container">
+        <div class="logo">
+            <h1>
+                <a href="https://moritzgauss.com">Mori77z</a> 
+                <span>
+                    <a href="/about">(About)</a>
+                </span>
+            </h1>
+        </div>
+    <nav>
+        <a href="/" class="nav active">Creative</a>
+        <a href="/digital" class="nav">Digital</a>
+        <a href="/objects" class="nav">Objects</a>
+        <a href="/concepts" class="nav">Concepts</a>
+    </nav>
+    </div>
 
 <!-- <div id="anim-container">
     <div id="board"></div>
