--- a/index.html
+++ b/index.html
@@ -49,48 +49,56 @@
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd1-copyright-moritzgauss.JPG" alt="Creative Direction Image 1">
+             <span class="material-symbols-outlined icon">web_traffic</span>
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd3-copyright-moritzgauss.JPG" alt="Creative Direction Image 3">
+             <span class="material-symbols-outlined icon">web_traffic</span>
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd4-copyright-moritzgauss.JPG" alt="Creative Direction Image 4">
+             <span class="material-symbols-outlined icon">web_traffic</span>
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd5-copyright-moritzgauss.jpg" alt="Creative Direction Image 5">
+             <span class="material-symbols-outlined icon">web_traffic</span>
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd6-copyright-moritzgauss.jpg" alt="Creative Direction Image 6">
+             <span class="material-symbols-outlined icon">web_traffic</span>
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd9-copyright-moritzgauss.JPG" alt="Creative Direction Image 9">
+             <span class="material-symbols-outlined icon">web_traffic</span>
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd10-copyright-moritzgauss.jpg" alt="Creative Direction Image 10">
+             <span class="material-symbols-outlined icon">web_traffic</span>
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd11-copyright-moritzgauss.JPG" alt="Creative Direction Image 11">
+             <span class="material-symbols-outlined icon">web_traffic</span>
             </div>
           </div>
     </div>
@@ -128,12 +136,14 @@
         <div class="info"></div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier1-copyright-moritzgauss.jpeg" alt="Image 2">
+         <span class="material-symbols-outlined icon">web_traffic</span>
         </div>
     </div>
     <div class="scroll-box">
         <div class="info"></div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier3-copyright-moritzgauss.jpeg" alt="Image 3">
+         <span class="material-symbols-outlined icon">web_traffic</span>
         </div>
     </div>
 </div>
@@ -226,6 +236,7 @@ acrylic paint with drip technique.</p>
         </div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/typo1-copyright-moritzgauss.jpg" alt="Typography Image 1">
+         <span class="material-symbols-outlined icon">web_traffic</span>
         </div>
     </div>
     
@@ -233,6 +244,7 @@ acrylic paint with drip technique.</p>
         <div class="info"></div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/typo2-copyright-moritzgauss.PNG" alt="Typography Image 2">
+         <span class="material-symbols-outlined icon">web_traffic</span>
         </div>
     </div>
 
@@ -240,6 +252,7 @@ acrylic paint with drip technique.</p>
         <div class="info"></div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/typo3-copyright-moritzgauss.jpeg" alt="Typography Image 3">
+         <span class="material-symbols-outlined icon">web_traffic</span>
         </div>
     </div>
 
@@ -247,6 +260,7 @@ acrylic paint with drip technique.</p>
         <div class="info"></div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/typo4-copyright-moritzgauss.png" alt="Typography Image 4">
+         <span class="material-symbols-outlined icon">web_traffic</span>
         </div>
     </div>
 
@@ -254,6 +268,7 @@ acrylic paint with drip technique.</p>
         <div class="info"></div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/typo5-copyright-moritzgauss.jpg" alt="Typography Image 5">
+         <span class="material-symbols-outlined icon">web_traffic</span>
         </div>
     </div>
 
@@ -261,6 +276,7 @@ acrylic paint with drip technique.</p>
         <div class="info"></div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/typo6-copyright-moritzgauss.png" alt="Typography Image 6">
+         <span class="material-symbols-outlined icon">web_traffic</span>
         </div>
     </div>
 
@@ -268,6 +284,7 @@ acrylic paint with drip technique.</p>
         <div class="info"></div>
         <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/typo7-copyright-moritzgauss.png" alt="Typography Image 7">
+         <span class="material-symbols-outlined icon">web_traffic</span>
         </div>
     </div>
 </div>
@@ -290,18 +307,21 @@ acrylic paint with drip technique.</p>
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/print1-copyright-moritzgauss.jpg" alt="Printworks Image 1">
+             <span class="material-symbols-outlined icon">web_traffic</span>
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/print3-copyright-moritzgauss.jpg" alt="Printworks Image 3">
+             <span class="material-symbols-outlined icon">web_traffic</span>
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
             <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/photo2-copyright-moritzgauss.jpeg" alt="Printworks Image 4">
+             <span class="material-symbols-outlined icon">web_traffic</span>
         </div>
         </div>
     </div>
@@ -323,30 +343,35 @@ acrylic paint with drip technique.</p>
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/photo1-copyright-moritzgauss.jpg" alt="Photography Image 1">
+             <span class="material-symbols-outlined icon">web_traffic</span>
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/photo3-copyright-moritzgauss.jpg" alt="Photography Image 3">
+             <span class="material-symbols-outlined icon">web_traffic</span>
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/photo4-copyright-moritzgauss.jpg" alt="Photography Image 4">
+             <span class="material-symbols-outlined icon">web_traffic</span>
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/photo5-copyright-moritzgauss.jpg" alt="Photography Image 5">
+             <span class="material-symbols-outlined icon">web_traffic</span>
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/photo6-copyright-moritzgauss.jpg" alt="Photography Image 6">
+             <span class="material-symbols-outlined icon">web_traffic</span>
             </div>
         </div>
     </div>
