--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <div class="scroll-box">
             <div class="info">
                 <h2>Creative Direction (2024)</h2>
-                <p>illRise2Shine Corporate Identity and Fashion Concepts</p>
-                <a href="https://r2shine.de" target="_blank">https://r2shine.de</a>
+                <p>illRise2Shine Corporate Identity and Fashion Concepts<br>
+                <a href="https://r2shine.de" target="_blank">https://r2shine.de</a></p>
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd1-copyright-moritzgauss.JPG" alt="Creative Direction Image 1">
