--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="modde.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Instrument+Serif:ital@0;1&family=Trocchi&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=web_traffic" />
 </head>
@@ -47,8 +45,8 @@
         <div class="scroll-box">
             <div class="info">
                 <h2>Creative Direction (2024)</h2>
-                <p>illRise2Shine Corporate Identity and Fashion Concepts<br>
-                <a href="https://r2shine.de" target="_blank">https://r2shine.de</a></p>
+                <p>illRise2Shine Corporate Identity and Fashion Concepts</p>
+                <a href="https://r2shine.de" target="_blank">https://r2shine.de</a>
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/cd1-copyright-moritzgauss.JPG" alt="Creative Direction Image 1">
