--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <div class="scroll-box">
         <div class="info">
             <h2>Atelier M26 (2023)</h2>
-            <p>In April 2023, I applied to Local Artist in Residence to move into an atelier<br>on the premises of the “M26” art gallery in Regensburg.<br>
+            <p>In April 2023, I applied to Local Artist in Residence to move into an atelier on the premises of the “M26” art gallery in Regensburg.<br>
             <a href="https://kalender.regensburg-digital.de/veranstaltung/vielfaeltiges-kulturprogramm-im-m26/">Link to M26 Program</a></p>
         </div>
         <div class="img-container">
