--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <div class="scroll-box">
         <div class="info">
             <h2>Atelier M26 (2023)</h2>
-            <p>In April 2023, I applied to Local Artist in Residence to move into an atelier on the premises of the “M26” art gallery in Regensburg.<br>
+            <p>Works and Workshop within a 10 month residency at <a href"instagram.com/m26.kultur">M26 in Regensburg. <br>
             <a href="https://kalender.regensburg-digital.de/veranstaltung/vielfaeltiges-kulturprogramm-im-m26/">Link to M26 Program</a></p>
         </div>
         <div class="img-container">
@@ -156,7 +156,7 @@
         </div>
     </div>
   <div class="discr-container">
-    <p>The Images 1, 2 were taking during a Typography Workshops, i offered in the gallery and cultural space in the Maximilianstraße 26 in Regensburg..
+    <p>The Images 1, 2 were taking during a Typography Workshops, i offered in the gallery and cultural space in the Maximilianstraße 26 in Regensburg.
 </p>
  </div>
  </div>
