--- a/index.html
+++ b/index.html
@@ -111,10 +111,8 @@
         </div>
     </div>
    <div class="discr-container">
-            <p>Rise 2 Shine reimagines how we approach apparel by challenging the need for new creations and focusing on unlocking the potential in existing materials. <br>
-             This method supports sustainability and pushes creativity through reuse and transformation. Similar to architect Arno Brandlhuber, who transforms existing structures into something new and impactful, Rise 2 Shine applies this concept to fashion. 
-             <br>Seeking to innovate by repurposing what already exists, to create unique results. In a crowded market, Rise 2 Shine advocates for a fresh perspective that values and transforms existing resources. By remixing and reimagining current materials, the products are unique, sustainable and eye-opening. The registered trademark ® embodies this approach, echoing the simplicity and elegance seen in Apple's 2010s marketing. 
-             <br>Rise 2 Shine® represents a new narrative for fashion, where fun and value come from rethinking and transforming the familiar.
+            <p>Rise 2 Shine reimagines how we approach apparel by challenging the need for new creations and focusing on unlocking the potential in existing materials.
+             Rise 2 Shine® represents a new narrative for fashion, where fun and value come from rethinking and transforming the familiar.
             </p>
         </div>
     </div>
@@ -162,12 +160,12 @@
  </div>
 
   
-  <!-- <div class="combined-container">
+  <div class="combined-container">
     <div class="content" id="artworks">
         <div class="scroll-box">
             <div class="info">
-                <h2>Artworks (2023)</h2>
-                <p>A collection of paintings i made <br> and considered good enough to upload here.</p>
+                <h2>Painting (2023)</h2>
+                <p>monobloccc (2023), bone&clyde (2023)</p>
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork1-copyright-moritzgauss.jpg" alt="Artworks Image 1">
@@ -224,7 +222,7 @@ with drip technique. And monobloc chair painted
 with acrylic paint on 24 cm x 24 cm white canvas,
 acrylic paint with drip technique.</p>
   </div>
-</div> -->
+</div>
 
   <div class="combined-container">
    <div class="content" id="typography">
