--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
     <div class="header-container">
         <div class="logo">
-            <a href="https://moritzgauss.com" class="logo-link">Mori77z</a>
+            <a href="https://moritzgauss.com" class="logo-link">Moritz Gauss</a>
             <a href="/about" class="about-link">(About)</a>
         </div>
         
     <nav>
-        <a href="/" class="nav active">Creative</a>
+        <a href="/" class="nav active">Works</a>
         <a href="/digital" class="nav">Digital</a>
         <a href="/objects" class="nav">Objects</a>
         <a href="/concepts" class="nav">Concepts</a>
@@ -169,42 +169,49 @@
             </div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork1-copyright-moritzgauss.jpg" alt="Artworks Image 1">
+                <span class="material-symbols-outlined icon">web_traffic</span>
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork2-copyright-moritzgauss.jpeg" alt="Artworks Image 2">
+                <span class="material-symbols-outlined icon">web_traffic</span>
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork3-copyright-moritzgauss.jpeg" alt="Artworks Image 3">
+                 <span class="material-symbols-outlined icon">web_traffic</span>
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork4-copyright-moritzgauss.jpeg" alt="Artworks Image 4">
+                <span class="material-symbols-outlined icon">web_traffic</span>
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork5-copyright-moritzgauss.jpeg" alt="Artworks Image 5">
+                <span class="material-symbols-outlined icon">web_traffic</span>
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork6-copyright-moritzgauss.jpeg" alt="Artworks Image 6">
+                <span class="material-symbols-outlined icon">web_traffic</span>
             </div>
         </div>
         <div class="scroll-box">
             <div class="info"></div>
             <div class="img-container">
                 <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/artwork7-copyright-moritzgauss.jpg" alt="Artworks Image 7">
+                <span class="material-symbols-outlined icon">web_traffic</span>
             </div>
         </div>
     </div>
@@ -216,11 +223,7 @@
         </div>
     </div>
    <div class="discr-container">
-   <p>Bone and cement modelling
-clay on 24 cm x 30 cm white canvas, acrylic paint
-with drip technique. And monobloc chair painted
-with acrylic paint on 24 cm x 24 cm white canvas,
-acrylic paint with drip technique.</p>
+   <p>Bone and cement with acrylic paint on canvas<br>thick acrylic paint on canvas</p>
   </div>
 </div>
 
