--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="header-container">
         <div class="logo">
             <a href="https://beach.mori77z.de" class="logo-link">Moritz Gauss</a>
-            <a href="/about" class="about-link">(About)</a>
+            <a href="https://beach.mori77.de" class="about-link">(About)</a>
         </div>
         
     <nav>
