--- a/index.html
+++ b/index.html
@@ -39,8 +39,50 @@
 </div> -->
  
  <div class="main-container">
-
+  
   <div class="combined-container">
+   <div class="content" id="atelier">
+    <div class="scroll-box">
+        <div class="info">
+            <h2>Residency M26 (2023)</h2>
+            <p>Works and Workshop within a 10 month residency at <a href"instagram.com/m26.kultur">M26 in Regensburg. <br>
+            <a href="https://kalender.regensburg-digital.de/veranstaltung/vielfaeltiges-kulturprogramm-im-m26/">Link to M26 Program</a></p>
+        </div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier2-copyright-moritzgauss.jpeg" alt="Image 1">
+        </div>
+    </div>
+    
+    <div class="scroll-box">
+        <div class="info"></div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier1-copyright-moritzgauss.jpeg" alt="Image 2">
+         <span class="material-symbols-outlined icon">web_traffic</span>
+        </div>
+    </div>
+    <div class="scroll-box">
+        <div class="info"></div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier3-copyright-moritzgauss.jpeg" alt="Image 3">
+         <span class="material-symbols-outlined icon">web_traffic</span>
+        </div>
+    </div>
+</div>
+
+ <div class="arrows-wrapper">
+        <div class="arrows">
+            <span class="arrow arrow_left">←</span>
+            <span class="arrow arrow_right">→</span>
+        </div>
+    </div>
+  <div class="discr-container">
+    <p>The Images 1, 2 were taking during a Typography Workshops, i offered in the gallery and cultural space in the Maximilianstraße 26 in Regensburg.
+</p>
+ </div>
+ </div>
+
+
+   <div class="combined-container">
     <div class="content" id="creative-direction">
         <div class="scroll-box">
             <div class="info">
@@ -117,49 +159,7 @@
         </div>
     </div>
 
-  
-  <div class="combined-container">
-   <div class="content" id="atelier">
-    <div class="scroll-box">
-        <div class="info">
-            <h2>Atelier M26 (2023)</h2>
-            <p>Works and Workshop within a 10 month residency at <a href"instagram.com/m26.kultur">M26 in Regensburg. <br>
-            <a href="https://kalender.regensburg-digital.de/veranstaltung/vielfaeltiges-kulturprogramm-im-m26/">Link to M26 Program</a></p>
-        </div>
-        <div class="img-container">
-            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier2-copyright-moritzgauss.jpeg" alt="Image 1">
-        </div>
-    </div>
-    
-    <div class="scroll-box">
-        <div class="info"></div>
-        <div class="img-container">
-            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier1-copyright-moritzgauss.jpeg" alt="Image 2">
-         <span class="material-symbols-outlined icon">web_traffic</span>
-        </div>
-    </div>
-    <div class="scroll-box">
-        <div class="info"></div>
-        <div class="img-container">
-            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier3-copyright-moritzgauss.jpeg" alt="Image 3">
-         <span class="material-symbols-outlined icon">web_traffic</span>
-        </div>
-    </div>
-</div>
 
- <div class="arrows-wrapper">
-        <div class="arrows">
-            <span class="arrow arrow_left">←</span>
-            <span class="arrow arrow_right">→</span>
-        </div>
-    </div>
-  <div class="discr-container">
-    <p>The Images 1, 2 were taking during a Typography Workshops, i offered in the gallery and cultural space in the Maximilianstraße 26 in Regensburg.
-</p>
- </div>
- </div>
-
-  
   <div class="combined-container">
     <div class="content" id="artworks">
         <div class="scroll-box">
