--- a/index.html
+++ b/index.html
@@ -49,10 +49,60 @@
             <a href="https://kalender.regensburg-digital.de/veranstaltung/vielfaeltiges-kulturprogramm-im-m26/">Link to M26 Program</a></p>
         </div>
         <div class="img-container">
-            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier2-copyright-moritzgauss.jpeg" alt="Image 1">
+            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier3-copyright-moritzgauss.jpeg" alt="Image 1">
         </div>
     </div>
-    
+        <div class="scroll-box">
+        <div class="info"></div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier5.jpeg" alt="Image 3">
+         <span class="material-symbols-outlined icon">web_traffic</span>
+        </div>
+    </div>
+        </div>
+        <div class="scroll-box">
+        <div class="info"></div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier4.JPEG" alt="Image 3">
+         <span class="material-symbols-outlined icon">web_traffic</span>
+        </div>
+    </div>
+        </div>
+        </div>
+        <div class="scroll-box">
+        <div class="info"></div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier6.JPEG" alt="Image 3">
+         <span class="material-symbols-outlined icon">web_traffic</span>
+        </div>
+    </div>
+        </div>
+        </div>
+        <div class="scroll-box">
+        <div class="info"></div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier7.jpg" alt="Image 3">
+         <span class="material-symbols-outlined icon">web_traffic</span>
+        </div>
+    </div>
+        </div>
+        </div>
+        <div class="scroll-box">
+        <div class="info"></div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier9.JPG" alt="Image 3">
+         <span class="material-symbols-outlined icon">web_traffic</span>
+        </div>
+    </div>
+        </div>
+        </div>
+        <div class="scroll-box">
+        <div class="info"></div>
+        <div class="img-container">
+            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier10.JPG" alt="Image 3">
+         <span class="material-symbols-outlined icon">web_traffic</span>
+        </div>
+    </div>
     <div class="scroll-box">
         <div class="info"></div>
         <div class="img-container">
@@ -63,7 +113,7 @@
     <div class="scroll-box">
         <div class="info"></div>
         <div class="img-container">
-            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier3-copyright-moritzgauss.jpeg" alt="Image 3">
+            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier4-copyright-moritzgauss.jpeg" alt="Image 3">
          <span class="material-symbols-outlined icon">web_traffic</span>
         </div>
     </div>
@@ -76,7 +126,7 @@
         </div>
     </div>
   <div class="discr-container">
-    <p>The Images 1, 2 were taking during a Typography Workshops, i offered in the gallery and cultural space in the Maximilianstraße 26 in Regensburg.
+    <p>Various mostly artistic works have been created within the residency. In the process, I was able to expand my skills in working with various media such as creating screen- printed posters, sculpture works, and art installations.
 </p>
  </div>
  </div>
