index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="scroll-box">
         <div class="info"></div>
         <div class="img-container">
-            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier6.JPEG" alt="Image 3">
+            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/atelier6.jpeg" alt="Image 3">
          <span class="material-symbols-outlined icon">web_traffic</span>
         </div>
     </div>
