index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
     </div>
   <div class="discr-container">
-    <p>Various mostly artistic works have been created within the residency. In the process, I was able to expand my skills in working with various media such as creating screen- printed posters, sculpture works, and art installations.
+    <p>Within the residency I was able to expand my skills in working with various media such as creating screen- printed posters, sculpture works, and art installations.
 </p>
  </div>
  </div>
