--- a/index.html
+++ b/index.html
@@ -44,14 +44,7 @@
                             <a href="https://www.figma.com/design/3ABMtTGuN2ONH84bzsiKaa/Organisation-Landing-Page-1" target="_blank">Link zum Design in Figma</a>
                         </div>
                         <div class="iframe-container">
-                            <iframe src=https://embed.figma.com/proto/3ABMtTGuN2ONH84bzsiKaa/Organisation-Landing-Page-1?node-id=1-5&scaling=contain&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A5" allowfullscreen scrolling="no"></iframe>
-                            <a href="https://www.figma.com/design/3ABMtTGuN2ONH84bzsiKaa/Organisation-Landing-Page-1" target="_blank" class="material-symbols-outlined icon">web_traffic</a>               
-                        </div>
-                    </div>
-                      <div class="scroll-box">
-                        <div class="info"><p>Mobil</p></div>
-                        <div class="img-container">
-                            <iframe src="https://embed.figma.com/proto/3ABMtTGuN2ONH84bzsiKaa/Organisation-Landing-Page-1?node-id=1-97&scaling=contain&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A97" allowfullscreen scrolling="no"></iframe>
+                            <iframe src=https://embed.figma.com/proto/3ABMtTGuN2ONH84bzsiKaa/Organisation-Landing-Page-1?node-id=1-5&scaling=contain&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A5&embed-host=share" allowfullscreen scrolling="no"></iframe>
                             <a href="https://www.figma.com/design/3ABMtTGuN2ONH84bzsiKaa/Organisation-Landing-Page-1" target="_blank" class="material-symbols-outlined icon">web_traffic</a>               
                         </div>
                 </div>
@@ -74,25 +67,27 @@
                     <div class="scroll-box">
                         <div class="info">
                             <h2>Bye Bambi Webshop Konzept (2024)</h2>
-                            <p>Desktop</p>
                             <a href="https://www.figma.com/design/4mM3Cv35AzW8HO34zmxGU2/Byebambi-Webshop" target="_blank">Link zum Design in Figma</a>
                         </div>
+                            <div class="img-container">
+                                <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/byebambi1-copyrigh-moritzgauss.png" alt="byebambi 1">
+                                <span class="material-symbols-outlined icon">web_traffic</span>
+                            </div>
+                        </div>
+                           
+                    <div class="scroll-box">
+                        <div class="info"> <p>Desktop</p>
+                        </div>
                         <div class="iframe-container">
-                            <iframe src="https://embed.figma.com/proto/4mM3Cv35AzW8HO34zmxGU2/Byebambi-Webshop?node-id=1-69&p=f&scaling=contain&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A69" allowfullscreen></iframe>
+                            <iframe src="https://embed.figma.com/proto/4mM3Cv35AzW8HO34zmxGU2/Byebambi-Webshop?node-id=1-69&p=f&scaling=contain&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A69&embed-host=share" allowfullscreen></iframe>
                             <a href="https://www.figma.com/proto/4mM3Cv35AzW8HO34zmxGU2/Byebambi-Webshop?node-id=1-18&p=f&t=TNpADcki0AbdG229-1&scaling=contain&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A18" target="_blank" class="material-symbols-outlined icon">web_traffic</a>               
                         </div>
                     </div>
-                    <div class="scroll-box">
-                        <div class="info"></div>
-                        <div class="img-container">
-                            <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/byebambi1-copyrigh-moritzgauss.png" alt="byebambi 1">
-                            <span class="material-symbols-outlined icon">web_traffic</span>
-                        </div>
-                    </div>
+                       
                       <div class="scroll-box">
                         <div class="info"><p>Mobil</p></div>
                         <div class="img-container">
-                            <iframe src="https://embed.figma.com/proto/4mM3Cv35AzW8HO34zmxGU2/Byebambi-Webshop?node-id=1-18&p=f&scaling=contain&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A18" allowfullscreen></iframe>
+                            <iframe src="https://embed.figma.com/proto/4mM3Cv35AzW8HO34zmxGU2/Byebambi-Webshop?node-id=1-18&p=f&scaling=contain&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A18&embed-host=share" allowfullscreen></iframe>
                             <a href="https://www.figma.com/proto/4mM3Cv35AzW8HO34zmxGU2/Byebambi-Webshop?node-id=1-18&p=f&t=TNpADcki0AbdG229-1&scaling=contain&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A18&show-proto-sidebar=1" target="_blank" class="material-symbols-outlined icon">web_traffic</a>               
                         </div>
                 </div>
