--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                          <a href="https://moritzgauss.github.io/ipodplayer" target="_blank">Link to IPod Player</a>
                      </div>
                            <div class="iframe-container">
-                         <iframe src="https://moritzgauss.github.io/ipodplayer"></iframe>
+                         <iframe src="https://moritzgauss.github.io/ipodplayer" allowfullscreen="no"></iframe>
                          <a href="https://moritzgauss.github.io/ipodplayer" target="_blank" class="material-symbols-outlined icon">web_traffic</a>               
                      </div>
                      </div>
