--- a/index.html
+++ b/index.html
@@ -424,6 +424,7 @@
                      <span class="arrow arrow_right">→</span>
                  </div>
              </div>
+        </div>
             
                 <div class="combined-container" id="archive">
              <div class="content">
